--- a/templates/dining.html
+++ b/templates/dining.html
@@ -13,6 +13,7 @@
          <div class = "whatisopen">
             <div id="current_date"></div>
             <div id="fall_schedule"></div>
+            <div class="dininglocations">
             <div id="pit_schedule"></div>
             <div id="starbucks_schedule"></div>
             <div id="connections_schedule"></div>
@@ -21,6 +22,7 @@
             <div id="douglassbrunch_schedule"></div>
             <div id="douglassdinner_schedule"></div>
          </div>
+      </div>
             <section class="lead">
          <h2 class="full-width">Dining Locations</h2>
          <div class="zoom">
