--- a/templates/ratemycoursefeedback.html
+++ b/templates/ratemycoursefeedback.html
@@ -8,18 +8,28 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="../static/styles.css">
 <style type="text/css">
-
+  
     p {
-        margin: 0 auto;
-        display: grid;
+        margin:auto;
+        display: inline-flex;
         grid-template-columns: 2fr 1fr;
         text-align: center;
+        
+    }
+    
+    .form_center {
+        margin: auto 0;
+        display:flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
 
-    .form_center {
-        display: flex;
-        margin: 0 auto;
+    label{
+        display:inline-block;
+        
+        
     }
+      
 </style>
 <script src="/static/script.js"></script>
 {% endblock %}
