--- a/templates/dining.html
+++ b/templates/dining.html
@@ -14,13 +14,13 @@
             <div id="current_date"></div>
             <div id="fall_schedule"></div>
             <div class="dininglocations">
-            <div id="pit_schedule"></div>
-            <div id="starbucks_schedule"></div>
-            <div id="connections_schedule"></div>
-            <div id="hillside_schedule"></div>
-            <div id="douglassbreak_schedule"></div>
-            <div id="douglassbrunch_schedule"></div>
-            <div id="douglassdinner_schedule"></div>
+            <p id="pit_schedule"></p>
+            <p id="starbucks_schedule"></p>
+            <p id="connections_schedule"></p>
+            <p id="hillside_schedule"></p>
+            <p id="douglassbreak_schedule"></p>
+            <p id="douglassbrunch_schedule"></p>
+            <p id="douglassdinner_schedule"></p>
          </div>
       </div>
             <section class="lead">
