adding monday hours

--- a/templates/dining.html
+++ b/templates/dining.html
@@ -20,7 +20,15 @@
             <p id="hillside_schedule"></p>
             <p id="douglassbreak_schedule"></p>
             <p id="douglassbrunch_schedule"></p>
+            <p id="douglasslunch_schedule"></p>
             <p id="douglassdinner_schedule"></p>
+            <p id="grabngo_schedule"></p>
+            <p id="peets_schedule"></p>
+            <p id="danforthlunch_schedule"></p>
+            <p id="danforthdinner_schedule"></p>
+            <p id="californiarollin_schedule"></p>
+            <p id="facultyclub_schedule"></p>
+            <p id="brew_schedule"></p>
          </div>
       </div>
             <section class="lead">
