adding message that is nothing is open

--- a/templates/dining.html
+++ b/templates/dining.html
@@ -29,6 +29,7 @@
             <p id="californiarollin_schedule"></p>
             <p id="facultyclub_schedule"></p>
             <p id="brew_schedule"></p>
+            <p id="nothing"></p>
          </div>
       </div>
             <section class="lead">
