adding link to dining feedback form

--- a/templates/dining.html
+++ b/templates/dining.html
@@ -48,6 +48,7 @@
          <div id="ratemyclass" class="w3-hide w3-container w3-center w3-pale-blue">
         </div>
     </div>
+    <h2 class="full-width">Want to share your feedback about dining? <a href="diningfeedback">Click here!</a></h2>
       </section>
    </div>
    <script src="../static/zoom-by-ironex.min.js"></script>
