deleting contact.html as we aren't using it, making changes to dining

--- a/templates/dining.html
+++ b/templates/dining.html
@@ -40,15 +40,18 @@
          <div id="accordion">
             <button onclick="openAccordion('downdetector')" class="w3-btn w3-block w3-aqua"><h3><em>Douglass Dining Hall</em></h3></button>
          <div id="downdetector" class="w3-hide w3-container w3-center w3-pale-blue">
+            <span class="full-text"></span>
         </div>
          <button onclick="openAccordion('dining')" class="w3-btn w3-block w3-aqua"><h3><em>Danforth Dining Hall</em></h3></button>
          <div id="dining" class="w3-hide w3-container w3-center w3-pale-blue">
+            <span class="full-text"></span>
         </div>
               <button onclick="openAccordion('ratemyclass')" class="w3-btn w3-block w3-aqua"><h3><em>The Pit</em></h3></button>
          <div id="ratemyclass" class="w3-hide w3-container w3-center w3-pale-blue">
+            <span class="full-text"></span>
         </div>
     </div>
-    <h2 class="full-width">Want to share your feedback about dining? <a href="diningfeedback">Click here!</a></h2>
+    <h2 class="full-width">Want to share your feedback about dining? <a href="/diningfeedback">Click here!</a></h2>
       </section>
    </div>
    <script src="../static/zoom-by-ironex.min.js"></script>
