--- a/templates/dining.html
+++ b/templates/dining.html
@@ -51,7 +51,7 @@
             <span class="full-text"></span>
         </div>
     </div>
-    <h2 class="full-width">Want to share your feedback about dining? <a href="/diningfeedback">Click here!</a></h2>
+    <h2 class="dining-link">Want to share your feedback about dining? <a href="/diningfeedback">Click here!</a></h2>
       </section>
    </div>
    <script src="../static/zoom-by-ironex.min.js"></script>
