--- a/static/styles.css
+++ b/static/styles.css
@@ -209,7 +209,7 @@ h2.full-width {
 h2.dining-link {
 	width: 100%;
 	margin-bottom: 1em;
-	margin-bottom: 2em;
+	margin-top: 2em;
 }
 
 header, footer, nav, .lead, .full-width, .whatisopen {
