adding what's open heading to the whatsopen section

--- a/templates/dining.html
+++ b/templates/dining.html
@@ -11,6 +11,7 @@
 {% block content %}
       <div class="container">
          <div class = "whatisopen">
+            <h2>What's Open Right Now?</h2>
             <div id="current_date"></div>
             <div id="fall_schedule"></div>
             <div class="dininglocations">
