--- a/templates/dining.html
+++ b/templates/dining.html
@@ -35,9 +35,10 @@
       </div>
             <section class="lead">
          <h2 class="full-width">Dining Locations</h2>
-         <div class="zoom">
+         <figure>
             <img src="../static/hoursofoperation.png" alt="Fall Hours of Operation">
-         </div>
+            <figcaption>Chart made by<a href="https://dining.rochester.edu/">UR Dining Services</a>, double press image to open in new tab</figcaption>
+         </figure>
          <div id="accordion">
             <button onclick="openAccordion('downdetector')" class="w3-btn w3-block w3-aqua"><h3><em>Douglass Dining Hall</em></h3></button>
          <div id="downdetector" class="w3-hide w3-container w3-center w3-pale-blue">
