--- a/templates/dining.html
+++ b/templates/dining.html
@@ -37,7 +37,7 @@
          <h2 class="full-width">Dining Locations</h2>
          <figure>
             <img src="../static/hoursofoperation.png" alt="Fall Hours of Operation">
-            <figcaption>Chart made by<a href="https://dining.rochester.edu/">UR Dining Services</a>, double press image to open in new tab</figcaption>
+            <figcaption>Chart made by &nbsp;<a href="https://dining.rochester.edu/">UR Dining Services</a>, double press image to open in new tab</figcaption>
          </figure>
          <div id="accordion">
             <button onclick="openAccordion('downdetector')" class="w3-btn w3-block w3-aqua"><h3><em>Douglass Dining Hall</em></h3></button>
