adding in eastman and douglass dinner

--- a/templates/dining.html
+++ b/templates/dining.html
@@ -23,6 +23,7 @@
             <p id="douglassbrunch_schedule"></p>
             <p id="douglasslunch_schedule"></p>
             <p id="douglassdinner_schedule"></p>
+            <p id="eastmandinner_schedule"></p>
             <p id="grabngo_schedule"></p>
             <p id="peets_schedule"></p>
             <p id="danforthlunch_schedule"></p>
