--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -12,55 +12,59 @@
 {% endblock %}
 
 {% block content %}
-<h1>Rate My Course</h1>
-<form method="POST">
-	<center>
-		{{ form.csrf_token }}
-		<b>Department</b>
-		{{ form.department }}
-		<!-- <select id="dropMenu" class="dropdown-content" name = "dropMenu">
-			<option value="Accounting">Accounting</option>
-			<option value="Anthropology">Anthropology</option>
-			<option value="Art History">Art History</option>
-			<option value="Biology">Biology</option>
-			<option value="Brain & Cognitive Sciences">Brain & Cognitive Sciences</option>
-			<option value="Business">Business</option>
-			<option value="Chemical Engineering">Chemical Engineering</option>
-			<option value="Chemistry">Chemistry</option>
-			<option value="Computer Science">Computer Science</option>
-			<option value="Economics">Economics</option>
-			<option value="Education">Education</option>
-			<option value="English">English</option>
-			<option value="Finance">Finance</option>
-			<option value="Studio Arts">Studio Arts</option>
-			<option value="Geography">Geography</option>
-			<option value="Geology">Geology</option>
-			<option value="History">History</option>
-			<option value="Linguistics">Linguistics</option>
-			<option value="Marketing">Marketing</option>
-			<option value="Mathematics">Mathematics</option>
-			<option value="Music">Music</option>
-			<option value="Nursing">Nursing</option>
-			<option value="Philosophy">Philosophy</option>
-			<option value="Physics">Physics</option>
-			<option value="Political Science">Political Science</option>
-			<option value="Psychology">Psychology</option>
-			<option value="Theater">Theater</option>
-			<option value="Women's Studies">Women's Studies</option>
-			<option value="Writing">Writing</option>
-		</select>&nbsp; -->
-		<input id="abbreviation" type="text" placeholder="Search" name="abbreviation"> &nbsp;
-		<input type="submit" id="submit" name="submit">
-		<!-- <input type="button" id="submitSearch" onclick="location.href='ratemycourse';" value="Submit" /> -->
-	</center>
+<div class="container">
+	<div class="lead">
+		<h1>Rate My Course</h1>
+		<form method="POST">
+			<center>
+				{{ form.csrf_token }}
+				<b>Department</b>
+				{{ form.department }}
+				<!-- <select id="dropMenu" class="dropdown-content" name = "dropMenu">
+					<option value="Accounting">Accounting</option>
+					<option value="Anthropology">Anthropology</option>
+					<option value="Art History">Art History</option>
+					<option value="Biology">Biology</option>
+					<option value="Brain & Cognitive Sciences">Brain & Cognitive Sciences</option>
+					<option value="Business">Business</option>
+					<option value="Chemical Engineering">Chemical Engineering</option>
+					<option value="Chemistry">Chemistry</option>
+					<option value="Computer Science">Computer Science</option>
+					<option value="Economics">Economics</option>
+					<option value="Education">Education</option>
+					<option value="English">English</option>
+					<option value="Finance">Finance</option>
+					<option value="Studio Arts">Studio Arts</option>
+					<option value="Geography">Geography</option>
+					<option value="Geology">Geology</option>
+					<option value="History">History</option>
+					<option value="Linguistics">Linguistics</option>
+					<option value="Marketing">Marketing</option>
+					<option value="Mathematics">Mathematics</option>
+					<option value="Music">Music</option>
+					<option value="Nursing">Nursing</option>
+					<option value="Philosophy">Philosophy</option>
+					<option value="Physics">Physics</option>
+					<option value="Political Science">Political Science</option>
+					<option value="Psychology">Psychology</option>
+					<option value="Theater">Theater</option>
+					<option value="Women's Studies">Women's Studies</option>
+					<option value="Writing">Writing</option>
+				</select>&nbsp; -->
+				<input id="abbreviation" type="text" placeholder="Search" name="abbreviation"> &nbsp;
+				<input type="submit" id="submit" name="submit">
+				<!-- <input type="button" id="submitSearch" onclick="location.href='ratemycourse';" value="Submit" /> -->
+			</center>
 
-	{% if bool : %}
-		<h1>The course doesn't exist in database yet!</h1>
-	{% endif %}
+			{% if bool : %}
+				<h1>The course doesn't exist in database yet!</h1>
+			{% endif %}
 
-	<center><input type="button" onclick="location.href='ratemycoursefeedback';" value="Add a Review" /></center>
-	<!--<input type="submit" style="display: none" />-->
+			<center><input type="button" onclick="location.href='ratemycoursefeedback';" value="Add a Review" /></center>
+			<!--<input type="submit" style="display: none" />-->
 
-</form>
-<br>
+		</form>
+		<br>
+	</div>
+</div>
 {% endblock %}
