--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -18,7 +18,7 @@
 		<form method="POST">
 			<center>
 				{{ form.csrf_token }}
-				<p class="departments">Department</p>
+				<h2 class="full-width" style="color: #ADD8E6;">Department</h2>
 				{{ form.department }}
 				<!-- <select id="dropMenu" class="dropdown-content" name = "dropMenu">
 					<option value="Accounting">Accounting</option>
