--- a/static/styles.css
+++ b/static/styles.css
@@ -220,6 +220,9 @@ h1 {
 	font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
 	text-align: center;
 	color: #ADD8E6;
+	font-weight: bold;
+	padding-top: 1em;
+	padding-bottom: 1em;
 }
 
 .intro {
