--- a/static/styles.css
+++ b/static/styles.css
@@ -219,6 +219,9 @@ header, footer, nav, .lead, .full-width, .whatisopen {
 h1 {
 	font-family: "Century Gothic", "Avant Garde", AppleGothic, Futura, Geneva, sans-serif;
 	text-align: center;
+}
+
+.back h1 {
 	color: #ADD8E6;
 	font-weight: bold;
 	padding-top: 1em;
