--- a/templates/buildinglist.html
+++ b/templates/buildinglist.html
@@ -28,16 +28,19 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Down Detector Building List</h1>
-    <h5>Select your building to view the status</h5>
-    <section class="lead">
-    <ol>
-        {% for building in buildings %}
+<div class="container">
+    <div class="lead">
+        <h1>Down Detector Building List</h1>
+        <h5>Select your building to view the status</h5>
+        <section class="lead">
+            <ol>
+            {% for building in buildings %}
 
-        <li><a href="/downdetector/{{ building.buildingid }}"><u>{{ building.name }}</u></a></li>
+            <li><a href="/downdetector/{{ building.buildingid }}"><u>{{ building.name }}</u></a></li>
 
-        {% endfor %}
-    </ol>
-    </section>
-
+            {% endfor %}
+            </ol>
+        </section>
+    </div>
+</div>
 {% endblock %}
