--- a/templates/buildinglist.html
+++ b/templates/buildinglist.html
@@ -30,8 +30,8 @@
 {% block content %}
 <div class="container">
     <div class="lead">
-        <h1>Down Detector Building List</h1>
-        <h5>Select your building to view the status</h5>
+        <h1 class="ddbl">Down Detector Building List</h1>
+        <h2>Select your building to view the status</h2>
         <section class="lead">
             <ol>
             {% for building in buildings %}
