--- a/templates/buildinglist.html
+++ b/templates/buildinglist.html
@@ -30,9 +30,9 @@
 {% block content %}
 <div class="container">
     <div class="lead">
-        <h1 class="ddbl">Down Detector Building List</h1>
-        <h2>Select your building to view the status</h2>
+        <h2 class="full-width">Down Detector Building List</h2>
         <section class="lead">
+            <h2>Select your building to view the status</h2>
             <ol>
             {% for building in buildings %}
 
