--- a/templates/buildinglist.html
+++ b/templates/buildinglist.html
@@ -7,6 +7,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="../static/styles.css">
 <style>
+
+    h2.fullwidth 
     li {
         text-align: left;
         font-size: 24px;
@@ -29,9 +31,8 @@
 
 {% block content %}
 <div class="container">
-    <div class="lead">
+    <section class="lead">
         <h2 class="full-width">Down Detector Building List</h2>
-        <section class="lead">
             <h2>Select your building to view the status</h2>
             <ol>
             {% for building in buildings %}
