--- a/templates/ratemycourse.html
+++ b/templates/ratemycourse.html
@@ -57,7 +57,7 @@
 			</center>
 
 			{% if bool : %}
-				<h1>The course doesn't exist in database yet!</h1>
+				<h1>This course doesn't exist in our database yet! Add a review to include it.</h1>
 			{% endif %}
 
 			<center><input type="button" onclick="location.href='ratemycoursefeedback';" value="Add a Review" /></center>
