all the text is styled in buildinglist

--- a/templates/buildinglist.html
+++ b/templates/buildinglist.html
@@ -8,9 +8,12 @@
 <link rel="stylesheet" href="../static/styles.css">
 <style>
     li {
-        text-align: left;
         font-size: 24px;
-        margin-left: 1%;
+        padding-bottom: .5em;
+    }
+    
+    ol {
+        margin: 0 auto;
     }
 
     nav li {
