--- a/templates/buildinglist.html
+++ b/templates/buildinglist.html
@@ -26,7 +26,7 @@
 <div class="container">
     <section class="lead">
         <h2 class="full-width">Down Detector Building List</h2>
-            <h2 class="full-width" style="color: #ADD8E6;">Select your building to view the status</h2>
+            <h2 class="full-width" style="color: #ADD8E6; margin-bottom: 1em;">Select your building to view the status</h2>
             <ol>
             {% for building in buildings %}
 
