changing dining accordion

--- a/templates/dining.html
+++ b/templates/dining.html
@@ -41,18 +41,10 @@
             <figcaption>Chart made by &nbsp;<a href="https://dining.rochester.edu/">UR Dining Services</a>, double press image to open in new tab (not working yet, fyi for any beta testers)</figcaption>
          </figure>
          <div id="accordion">
-            <button onclick="openAccordion('downdetector')" class="w3-btn w3-block w3-aqua"><h3><em>Douglass Dining Hall</em></h3></button>
-         <div id="downdetector" class="w3-hide w3-container w3-center w3-pale-blue">
-            <span class="full-text"></span>
-        </div>
-         <button onclick="openAccordion('dining')" class="w3-btn w3-block w3-aqua"><h3><em>Danforth Dining Hall</em></h3></button>
-         <div id="dining" class="w3-hide w3-container w3-center w3-pale-blue">
-            <span class="full-text"></span>
-        </div>
-              <button onclick="openAccordion('ratemyclass')" class="w3-btn w3-block w3-aqua"><h3><em>The Pit</em></h3></button>
-         <div id="ratemyclass" class="w3-hide w3-container w3-center w3-pale-blue">
-            <span class="full-text"></span>
-        </div>
+            <button onclick="openAccordion('diningplans')" class="w3-btn w3-block w3-aqua"><h3><em>Ideas for Future Features</em></h3></button>
+         <div id="diningplans" class="w3-hide w3-container w3-center w3-pale-blue">
+            <span class="full-text"><p>This will contain a short description and an image of a mockup for a feature that could be implemented in the future</p></span>
+         </div>
     </div>
     <h2 class="dining-link">Want to share your feedback about dining? <a href="/diningfeedback">Click here!</a></h2>
       </section>
