--- a/templates/dining.html
+++ b/templates/dining.html
@@ -40,12 +40,9 @@
             <img src="../static/hoursofoperation.png" alt="Fall Hours of Operation">
             <figcaption>Chart made by &nbsp;<a href="https://dining.rochester.edu/">UR Dining Services</a>, double press image to open in new tab (not working yet, fyi for any beta testers)</figcaption>
          </figure>
-         <div id="accordion">
-            <button onclick="openAccordion('diningplans')" class="w3-btn w3-block w3-aqua"><h3><em>Ideas for Future Features</em></h3></button>
-         <div id="diningplans" class="w3-hide w3-container w3-center w3-pale-blue">
+         <h3><em>Ideas for Future Features</em></h3>
             <span class="full-text"><p>This will contain a short description and an image of a mockup for a feature that could be implemented in the future</p></span>
-         </div>
-    </div>
+            <span class="short-text"><p>This is a test text</p></span>
     <h2 class="dining-link">Want to share your feedback about dining? <a href="/diningfeedback">Click here!</a></h2>
       </section>
    </div>
