--- a/templates/dining.html
+++ b/templates/dining.html
@@ -40,10 +40,12 @@
             <img src="../static/hoursofoperation.png" alt="Fall Hours of Operation">
             <figcaption>Chart made by &nbsp;<a href="https://dining.rochester.edu/">UR Dining Services</a>, double press image to open in new tab (not working yet, fyi for any beta testers)</figcaption>
          </figure>
+         <div class="futureplans">
          <h3><em>Ideas for Future Features</em></h3>
             <span class="full-text"><p>This will contain a short description and an image of a mockup for a feature that could be implemented in the future</p></span>
             <span class="short-text"><p>This is a test text</p></span>
-    <h2 class="dining-link">Want to share your feedback about dining? <a href="/diningfeedback">Click here!</a></h2>
+         </div>
+    <h2 class="dining-link">Want to share your feedback about dining? <a href="/diningfeedbackform">Click here!</a></h2>
       </section>
    </div>
    <script src="../static/zoom-by-ironex.min.js"></script>
