--- a/templates/buildinglist.html
+++ b/templates/buildinglist.html
@@ -15,6 +15,8 @@
     ol {
         margin: 0 auto;
         color: #003366;
+        right: 2%;
+        position: relative;
     }
 
     nav li {
